# filematch

./: .gitignore  Cargo.toml  README.md  flake.nix
benches/: benchmark.rs
src/: compare_two_directories.rs  lib.rs  main.rs  util.rs
tests/: test.rs
