cargo-features = ["profile-rustflags"]

[package]
name = "filematch"
version = "0.1.1"
edition = "2021"
authors = ["Parrot7483"]
publish = false

[dependencies]
blake3 = "1.5.5"
clap = { version = "4", default-features = false, features = ["std", "help", "usage", "error-context", "derive"] }
crossbeam-channel = "0.5.14"
num_cpus = "1.16.0"
walkdir = "2"
serde_json = "1"

[dev-dependencies]
rand_xoshiro = "0.7"

[profile.dev]
rustflags = ["-C", "target-feature=+aes,+sse2"]

[profile.release]
strip = true
lto = true
panic = "abort"
debug = false
opt-level = 3
codegen-units = 1
rustflags = ["-C", "target-feature=+aes,+sse2"]

[profile.bench]
strip = true
lto = true
debug = false
opt-level = 3
codegen-units = 1
rustflags = ["-C", "target-feature=+aes,+sse2"]

[[bin]]
name = "filematch"
path = "src/main.rs"
test = false

[[bench]]
name = "benchmark"
harness = false